# Kinectron

./: .gitmodules  ArmWaveDetector.cpp  ArmWaveDetector.h  BrushDetector.h  CMakeLists.txt  FindKinectSDK2.cmake  GePoTool.cpp  GePoTool.h  HandZoomDetector.cpp  JumpDetector.cpp  KickDetector.h  KinectHandler.cpp  KinectHandler.h  KinectUtilTypes.h  KinectUtilsTypes.h  KinectronTypes.h  OpenArmDetector.h  SkeletonSmoother.cpp  SkeletonSmoother.h  SquatDetector.cpp  SquatDetector.h
Detectors/: ArmWaveDetector.cpp  ArmWaveDetector.h  BrushDetector.cpp  BrushDetector.h  GestureDetectorBase.h  HandUpDetector.cpp  HandUpDetector.h  HandZoomDetector.cpp  HandZoomDetector.h  JumpDetector.cpp  JumpDetector.h  KickDetector.cpp  KickDetector.h  LeanDetector.cpp  LeanDetector.h  OpenArmDetector.cpp  OpenArmDetector.h  PunchDetector.cpp  PunchDetector.h  SquatDetector.cpp  SquatDetector.h  SwipeDetector.cpp  SwipeDetector.h  TomDetector.cpp  TomDetector.h
include/Kinectron/: GePoTool.h  KinectHandler.h  KinectronTypes.h  SkeletonSmoother.h
include/Kinectron/Detectors/: ArmWaveDetector.h  BrushDetector.h  GestureDetectorBase.h  HandUpDetector.h  HandZoomDetector.h  JumpDetector.h  KickDetector.h  LeanDetector.h  PunchDetector.h  SquatDetector.h  SwipeDetector.h
src/: GePoTool.cpp  KinectHandler.cpp  SkeletonSmoother.cpp
src/Detectors/: ArmWaveDetector.cpp  BrushDetector.cpp  HandUpDetector.cpp  HandZoomDetector.cpp  JumpDetector.cpp  KickDetector.cpp  LeanDetector.cpp  OpenArmDetector.cpp  PunchDetector.cpp  SquatDetector.cpp  SwipeDetector.cpp  TomDetector.cpp
